# experience-study-ai-copilot-codex-skill

./: .gitignore  AGENTS.md  README.md  TESTING_MESSAGES.md  pyproject.toml
.agents/skills/experience-study-copilot/: SKILL.md
.agents/skills/experience-study-copilot/references/: artifacts.md  calculation-contract.md  capabilities.md  examples.md  privacy-contract.md  visualization.md  workflow.md
data/input/: synthetic_inforce.csv
experience_study/: __init__.py  ae_math.py  analysis.py  artifacts.py  cli.py  contracts.py  feature_engineering.py  io.py  packet.py  sanitization.py  validation.py  visualization.py
tests/: conftest.py  test_ae_workflow.py  test_feature_engineering.py  test_visualization.py
