[project]
name = "experience-study-ai-copilot-codex-skill"
version = "0.1.0"
description = "CLI-first deterministic Experience Study A/E workflow engine and Codex skill."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14",
    "pydantic>=2",
    "scipy>=1.11",
]

[project.scripts]
experience-study = "experience_study.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["experience_study"]

[tool.pytest.ini_options]
testpaths = ["tests"]
